<resources>
    <string name="app_name">Zeeguu Reader</string>

    <!-- Settings -->
    <string name="settings_feedly_title">Feedly</string>
    <string name="settings_feedly_account_title">Account</string>
    <string name="settings_feedly_account_summary">Not logged in</string>
    <string name="settings_feedly_account_login">Logged in as</string>
    <string name="settings_feedly_account_logged">Logged in</string>
    <string name="settings_feedly_synchronize_title">Synchronization</string>
    <string name="settings_feedly_synchronize_summary">Synchronize on app start</string>

    <string name="settings_zeguu_title">Zeeguu</string>
    <string name="settings_zeguu_account_title">Account</string>
    <string name="settings_zeguu_account_summary">Not logged in</string>
    <string name="settings_zeguu_account_login">Logged in as</string>
    <string name="settings_zeguu_language_native_title">Native Language</string>
    <string name="settings_zeguu_language_native_summary">Your native language</string>
    <string name="settings_zeguu_language_learning_title">Learning Language</string>
    <string name="settings_zeguu_language_learning_summary">The language you are currently learning</string>
    <string name="settings_zeguu_highlight_title">Highlight words</string>
    <string name="settings_zeguu_highlight_summary">Highlight the words you are currently learning in the text.</string>
    <string name="settings_zeguu_difficulty_title">Article Recommender</string>
    <string name="settings_zeguu_difficulty_summary">Method for the difficulty calculation.</string>

    <string name="settings_browser_title">Browser</string>
    <string name="settings_browser_homepage_title">Homepage</string>
    <string name="settings_browser_homepage_summary">Set your home page</string>
    <string name="settings_browser_viewport_title">Viewport</string>
    <string name="settings_browser_viewport_summary">Enable wide viewport</string>

    <!-- Feedly -->
    <string name="feedly_authentication_successful">Authentication successful</string>
    <string name="feedly_authentication_failed">Authentication failed</string>
    <string name="feedly_subscriptions_updated">Subscriptions updated</string>

    <!-- Fragment titles -->
    <string name="title_feed_overview">Feed Overview</string>
    <string name="title_feed_entry_list">Feed Entry List</string>
    <string name="title_feed_entry">Feed Entry</string>
    <string name="title_feedly_authentication">Feedly Authentication</string>
    <string name="title_my_words">My Words</string>
    <string name="title_settings">Settings</string>

    <!-- Fragment tags -->
    <string name="tag_feed_overview">feedOverview</string>
    <string name="tag_main_settings">mainSettings</string>
    <string name="tag_zeeguu_settings">zeeguuSettings</string>
    <string name="tag_feedly_settings">zeeguuSettings</string>

    <!-- Menu titles -->
    <string name="menu_login_feedly">Feedly Login</string>
    <string name="menu_login_zeeguu">Zeeguu Login</string>
    <string name="menu_unread_switch">Show unread only</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Menu -->
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string name="action_mark_as_read_above">Mark above as read</string>
    <string name="action_mark_as_read_below">Mark below as read</string>
    <string name="action_mark_as_read_all">Mark all as read</string>

    <string name="action_mark_as_unread">Mark as unread</string>
    <string name="action_mark_as_read">Mark as read</string>

    <string name="action_favorite_add">Add to favorites</string>
    <string name="action_favorite_remove">Remove from favorites</string>

    <string name="action_refresh">Refresh</string>

    <!-- Default categories -->
    <string name="default_category_all">All articles</string>
    <string name="default_category_favorite">Saved for later</string>
    <string name="default_category_recommended">Zeeguu Recommended</string>
    <string name="category_uncategorized">Uncategorized</string>

    <!-- Shared preference keys -->
    <string name="pref_feedly">pref_feedly</string>
    <string name="pref_feedly_email">pref_feedly_email</string>
    <string name="pref_feedly_user_id">pref_feedly_user_id</string>
    <string name="pref_feedly_name">pref_feedly_name</string>
    <string name="pref_feedly_picture">pref_feedly_picture</string>
    <string name="pref_feedly_authentication_code">pref_feedly_authentication_code</string>
    <string name="pref_feedly_refresh_token">pref_feedly_refresh_token</string>
    <string name="pref_feedly_access_token">pref_feedly_access_token</string>
    <string name="pref_feedly_access_token_expiration">pref_feedly_access_token_expiration</string>
    <string name="pref_feedly_last_read_sync">pref_feedly_last_read_sync</string>
    <string name="pref_feedly_last_favorite_sync">pref_feedly_last_favorite_sync</string>
    <string name="pref_feedly_show_unread_only">pref_feedly_show_unread_only</string>

    <string name="pref_feedly_account">pref_feedly_account</string>
    <string name="pref_feedly_synchronize">pref_feedly_synchronize</string>

    <string name="pref_zeeguu">pref_zeeguu</string>

    <!-- Language arrays -->
    <string-array name="zeeguu_languages_entries">
        <item>English</item>
        <item>German</item>
        <item>French</item>
        <item>Italian</item>
    </string-array>

    <string-array name="zeeguu_language_entry_values">
        <item>en</item>
        <item>de</item>
        <item>fr</item>
        <item>it</item>
    </string-array>

    <string-array name="zeeguu_difficulty_entries">
        <item>Average</item>
        <item>Median</item>
    </string-array>

</resources>
