<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ch.unibe.scg.zeeguufeedreader.Preferences.PreferenceCategoryCustom
        android:title="@string/settings_zeguu_title">
        <Preference
            android:key="pref_zeeguu_account"
            android:title="@string/settings_zeguu_account_title"
            android:summary="@string/settings_zeguu_account_summary" />
        <ListPreference
            android:key="pref_zeeguu_language_native"
            android:title="@string/settings_zeguu_language_native_title"
            android:summary="@string/settings_zeguu_language_native_summary"
            android:entries="@array/zeeguu_languages_entries"
            android:entryValues="@array/zeeguu_language_entry_values" />
        <ListPreference
            android:key="pref_zeeguu_language_learning"
            android:title="@string/settings_zeguu_language_learning_title"
            android:summary="@string/settings_zeguu_language_learning_summary"
            android:entries="@array/zeeguu_languages_entries"
            android:entryValues="@array/zeeguu_language_entry_values" />
        <CheckBoxPreference
            android:key="pref_zeeguu_highlight_words"
            android:title="@string/settings_zeguu_highlight_title"
            android:summary="@string/settings_zeguu_highlight_summary"
            android:defaultValue="true" />
        <ListPreference
            android:key="pref_zeeguu_difficulty"
            android:title="@string/settings_zeguu_difficulty_title"
            android:summary="@string/settings_zeguu_difficulty_summary"
            android:entries="@array/zeeguu_difficulty_entries"
            android:entryValues="@array/zeeguu_difficulty_entries"
            android:defaultValue="Median" />
    </ch.unibe.scg.zeeguufeedreader.Preferences.PreferenceCategoryCustom>
</PreferenceScreen>