<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single"
        android:id="@+id/navigation_group_1">
        <item
            android:id="@+id/navigation_feed_overview"
            android:checked="true"
            android:icon="@drawable/ic_one"
            android:title="@string/title_feed_overview" />
        <item
            android:id="@+id/navigation_my_words"
            android:icon="@drawable/ic_two"
            android:title="@string/title_my_words" />
        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_three"
            android:title="@string/title_settings" />
    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/navigation_group_2">
        <item
            android:id="@+id/navigation_feedly"
            android:icon="@drawable/ic_action_feedly"
            android:title="@string/menu_login_feedly" />
        <item
            android:id="@+id/navigation_zeeguu"
            android:icon="@drawable/ic_action_zeeguu"
            android:title="@string/menu_login_zeeguu" />
    </group>
</menu>